--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,96 @@
-/* You can add global styles to this file, and also import other style files */
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.center-stretch {
+    justify-content: center;
+    align-items: stretch;
+}
+
+.center-center {
+    justify-content: center;
+    align-items: center;
+}
+
+.center-start {
+    justify-content: center;
+    align-items: start;
+}
+
+.sp-around-center {
+    justify-content: space-around;
+    align-items: center;
+}
+
+.sp-even-center {
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.sp-even-stretch {
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+.sp-between-stretch {
+    justify-content: space-between;
+    align-items: stretch;
+}
+
+.wrap {
+    flex-wrap: wrap;
+}
+
+.h100 {
+    height: 100%;
+}
+
+.w100 {
+    width: 100%;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.mb-70 {
+    margin-bottom: 70px;
+}
+
+.mt-50 {
+    margin-top: 50px;
+}
+
+body {
+    margin: 0px;
+    font-family: "Nunito", sans-serif;
+}
+
+h1, h2, h3, h4, ul {
+    font-family: "Jost", sans-serif;
+    color: rgb(0, 50, 0);
+}
+
+p {
+    color: rgb(0, 25, 0);
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+    padding: 0px;
+}
+
+html {
+	scroll-behavior: smooth;
+}
