--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,8 +74,8 @@
       </p>
       <p>
         These experiences led me to pursue programming and visual design further
-        in university, where I chose a program that offered modules in creating
-        visuals and programming to create interactive experiences.
+        in university, where I chose a program that focused on creating visuals
+        and programming to create interactive experiences.
       </p>
       <p style="margin-bottom: 50px">
         Now I continue to explore coding and visual design, driven by the joy of
