--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,25 +57,23 @@
     <section class="mb-70">
       <h1>About</h1>
       <p>
-        My fascination with technology began in early childhood, sparked by my
-        love for computer games and interactive experiences. Introduced to
-        Pascal by my father, I was captivated by the potential of coding to
-        bring ideas to life.
+        Since early childhood I was fascinated with computers, games and
+        interactive experiences. After being introduced to Pascal by my dad and
+        picking up Flash and Photoshop myself I realized that I too can bring
+        ideas to reality.
       </p>
       <p>
-        Coding, for me, is akin to solving puzzles, even more than that - it's
-        about figuring out the puzzle yourself and making algorithms to teach
-        the computer to solve the puzzle on your behalf.
+        Fast-forward to today I have a computer science university degree in a
+        program focused on coding and visual design. My most relevant and recent
+        experience is of a full stack web developer at Avilda developing
+        Avilda's own warehouse management system with Angular, Node.js, Express,
+        MySQL stack.
       </p>
       <p>
-        As I grew, I engaged in different creative mediums, from exploring
-        animation in Flash to experimenting with Photoshop, where I discovered
-        my interest for digital design.
-      </p>
-      <p>
-        These experiences led me to pursue programming and visual design further
-        in university, where I chose a program that focused on creating visuals
-        and programming to create interactive experiences.
+        However I've been coding for longer than that and at (almost) every
+        place I've worked. Whether it was coding algorithms for fully automated
+        warehouse simulations using C# or for data processing as a data analyst
+        with Python (and some VBA).
       </p>
       <p style="margin-bottom: 50px">
         Now I continue to explore coding and visual design, driven by the joy of
