Minor layout fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,7 +123,10 @@
           href="https://admissions.ktu.edu/programme/b-multimedia-technologies/"
           target="_blank"
         >
-          <div class="pop-out-card" style="padding: 10px">
+          <div
+            class="pop-out-card education-card-content"
+            style="padding: 10px"
+          >
             <h3>Bachelors degree in Computer Science</h3>
             <p style="font-weight: bold">Kaunas University of Technology</p>
             <p>Multimedia Technologies</p>
@@ -134,7 +137,10 @@
           href="https://www.udemy.com/course/the-web-developer-bootcamp/"
           target="_blank"
         >
-          <div class="pop-out-card" style="padding: 10px">
+          <div
+            class="pop-out-card education-card-content"
+            style="padding: 10px"
+          >
             <h3>The Web Developer Bootcamp</h3>
             <p style="font-weight: bold">Online Udemy Courses - 73hrs</p>
             <p>
