--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,6 +29,14 @@
     100%{background-position:0% 15%}
 }
 
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
 .link {
     font-weight: bold;
     transition: letter-spacing 0.3s ease;
@@ -43,6 +51,17 @@
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
+.section-margin {
+    margin-bottom: 70px;
+}
+
+.about-skill-mb {
+    margin-bottom: 50px;
+}
+
+.item-mb {
+    margin-bottom: 20px;
+}
 
 @mixin pop-out-raised {
     background: rgba(255, 255, 255, 0.3);
@@ -81,6 +100,7 @@
 }
 
 .content-column {
+    padding: 90px 0px;
     width: 50%;
 }
 
@@ -101,6 +121,12 @@
     height: 100%;
     width: 100%;
 }
+
+.contacts {
+    display: none;
+}
+
+
 
 @media screen and (max-width: 1250px) {
 
@@ -147,6 +173,73 @@
 
     .pointer-effect {
         display: none;
+    }
+}
+
+@page {
+    size: A4;
+}
+
+@media print {
+    body {
+        background: white !important;
+    }
+
+    nav {
+        display: none !important;
+    }
+
+    h1, h2 {
+        margin: 5px;
+    }
+
+    section {
+        break-inside: avoid;
+        page-break-inside: avoid;
+    }
+
+    .header {
+        position: relative;
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    .contacts {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+    .gradient-background,
+    .pointer-effect {
+        display: none !important;
+    }
+
+    .main-flow {
+        flex-direction: column;
+        padding: 0px 48px;
+    }
+
+    .content-column {
+        padding: 0px 0px;
+        width: unset;
+    }
+
+    .links {
+        margin: 0px;
+    }
+
+    .section-margin {
+        margin-bottom: 10px !important;
+    }
+
+    .about-skill-mb {
+        margin-bottom: 20px !important;
+    }
+
+    .item-mb {
+        padding-bottom: 0px !important;
     }
 }
 
