--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -12,3 +12,13 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+@media print {
+    :host {
+        padding: 0;
+    }
+    
+    .screen {
+        display: none;
+    }
+}
