Updated "about" section;

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,27 +90,16 @@
     <section class="section-margin">
       <h1>About</h1>
       <p>
-        Since early childhood I was fascinated with computers, games and
-        interactive experiences. After being introduced to Pascal by my dad and
-        picking up Flash and Photoshop myself I realized that I too can bring
-        ideas to reality.
-      </p>
-      <p>
-        Fast-forward to today I have a computer science university degree in a
-        program focused on coding and visual design. My most relevant and recent
-        experience is of a full stack web developer at Avilda developing
-        Avilda's own warehouse management system with Angular, Node.js, Express,
-        MySQL stack.
-      </p>
-      <p>
-        However I've been coding for longer than that and at (almost) every
-        place I've worked. Whether it was coding algorithms for fully automated
-        warehouse simulations using C# or for data processing as a data analyst
-        with Python (and some VBA).
+        I'm a full-stack web developer with hands-on experience building
+        casehandling systems and warehouse management software. On the frontend,
+        I work mainly with Angular, and on the backend I’ve built systems using
+        C# with .NET, TypeScript with Node.js, and Java with Spring Boot.
       </p>
       <p class="about-skill-mb">
-        Now I continue to explore coding and visual design, driven by the joy of
-        creation and the lessons learned from the process.
+        With a degree in computer science and a strong focus on both code and
+        design, I enjoy creating useful, well-structured software. I like
+        solving problems, learning new things, and turning ideas into working
+        products.
       </p>
       <div class="flex-row center-center wrap" style="margin-bottom: 5px">
         <app-skill-pill
